# hack-gpt

./: .gitignore  README.md
hack-gpt/: README.md  pyproject.toml  requirements.txt
hack-gpt/hackgpt/: __init__.py  ai_engine.py  cli.py  display.py  orchestrator.py  shell_utils.py  workspace.py
hack-gpt/hackgpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hackgpt/: ai_engine.py  cli.py  config.py  display.py  history.py  orchestrator.py  shell_utils.py
