[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackgpt"
version = "1.0.0"
description = "Advanced Cybersecurity CLI AI Assistant — like shell-gpt but for pentesting"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hack-GPT" }]
requires-python = ">=3.8"
keywords = ["cybersecurity", "pentest", "ai", "cli", "nmap", "recon", "hacking", "red-team"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
]

dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
hackgpt = "hackgpt.cli:main"

[project.urls]
"Homepage" = "https://github.com/your-repo/hack-gpt"
"Bug Tracker" = "https://github.com/your-repo/hack-gpt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hackgpt*"]
